# LLM---ChatBot

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
Frontend/src/components/: ChatWindow.tsx  Message.tsx
backend/: .env.example  build.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: chat.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: embedding_service.py  llm_service.py  vector_service.py
frontend/: package-lock.json  package.json
frontend/src/api/: chat.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/types/: chat.ts
legacy/web/: index.html  package-lock.json  package.json
legacy/web/src/: App.css  App.jsx
legacy/web/src/components/: ChatContainer.css  ChatContainer.jsx  ChatInput.css  ChatInput.jsx  ChatMessage.css  ChatMessage.jsx
legacy/web/src/services/: api.js
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs
